test/spec_vectors/simd_load_extend/fail/module_3.wat
(module (memory 0) (func (result v128) (v128.load16x4_s (f64.const 0))))